--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- Your content goes here -->
     <header class="navigation">
         <div class="logo">
-            <img width: "2%" height="50" src="C:/Users/paris/Documents/GitHub/UX_UI_HW_17/imgaes/logo.png" >
-        </div>
+            <img width: "2%" height="50" padding="1%"  text-align: center src="C:/Users/paris/Documents/GitHub/UX_UI_HW_17/imgaes/logo.png" >
+        
         <nav class="inline-block">
             <ul>
                 <li class="inline-block">WORK</li>
@@ -21,6 +21,7 @@
                 <li class="inline-block">LINKEDIN</li>
             </ul>
         </nav>
+    </div>
     </header>
     <section class="heroImg">
         <div class="content">
@@ -28,6 +29,9 @@
             <p>my approach?
                 Elegance in Interaction, Sophistication in Design.</p>
             <button>Download Resume</button>
+
+
+            
         </div>
     </section>
     <footer>
