--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Your content goes here -->
     <header class="navigation">
         <div class="logo">
-            <img width: "2%" height="50" padding="1%"  text-align: center src="C:/Users/paris/Documents/GitHub/UX_UI_HW_17/imgaes/logo.png" >
+            <img width: "2%" height="50" padding="1%"  text-align: center src="logo.png" >
         
         <nav class="inline-block">
             <ul>
@@ -25,7 +25,7 @@
     </header>
     <section class="heroImg">
         <div class="content">
-            <img src="C:/Users/paris/Documents/GitHub/UX_UI_HW_17/imgaes/Picture.png" alt="Your Picture">
+            <img src="Picture.png" alt="Your Picture">
             <p>my approach?
                 Elegance in Interaction, Sophistication in Design.</p>
             <button>Download Resume</button>
